force-app/main/default/objects/Endpoint__mdt/fields/ChaveCliente__c.field-meta.xml
<CustomField>
    <fullName>ChaveCliente__c</fullName>
    <label>Chave do cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>