force-app/main/default/objects/Endpoint__mdt/fields/CredencialNomeada__c.field-meta.xml
<CustomField>
    <fullName>CredencialNomeada__c</fullName>
    <label>Credencial nomeada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EuroSecuritizadora</fullName>
                <label>Euro Securitizadora</label>
            </value>
            <value>
                <fullName>FlowFinanceAPI</fullName>
                <label>Flow Finance API</label>
            </value>
            <value>
                <fullName>FlowFinanceAuth</fullName>
                <label>Flow Finance Auth</label>
            </value>
            <value>
                <fullName>Protheus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>