force-app/main/default/objects/Endpoint__mdt/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <label>Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>