force-app/main/default/objects/Endpoint__mdt/fields/NomeUsuario__c.field-meta.xml
<CustomField>
    <fullName>NomeUsuario__c</fullName>
    <label>Nome do usuário</label>
    <length>60</length>
    <type>Text</type>
</CustomField>