force-app/main/default/objects/Endpoint__mdt/fields/SegredoCliente__c.field-meta.xml
<CustomField>
    <fullName>SegredoCliente__c</fullName>
    <label>Segredo do cliente</label>
    <length>80</length>
    <type>Text</type>
</CustomField>